--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,17 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
-    tools:context="com.zhidian.myapplication.MainActivity">
+    android:background="@color/gray">
 
-    <com.zhidian.semicircleprogressview.SemiCircleProgressView
+    <com.blackflagbin.semicircleprogressview.SemiCircleProgressView
         android:id="@+id/progress"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        app:progress="100"
         app:angle="3"
+        app:progress="100"
         app:strokeWidth="3"/>
 
 </RelativeLayout>
