--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,23 @@
         app:progress="13"
         app:strokeWidth="3"/>
 
+
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/bt_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:text="start"/>
+
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/et_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bt_start"
+        android:layout_centerHorizontal="true"
+        android:hint="progress"/>
+
+
 </RelativeLayout>
