--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_centerInParent="true"
         app:angle="3"
         app:progress="13"
-        app:strokeWidth="3"/>
+        app:strokeWidth="3"
+        app:showProgressText="false"/>
 
 
     <android.support.v7.widget.AppCompatButton
